# Orbit

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  remem.md  vercel.json  vite.config.ts
.github/workflows/: ci.yml
contracts/crowdfunding/contracts/campaigns/: Cargo.toml
contracts/crowdfunding/contracts/campaigns/src/: lib.rs  test.rs
contracts/crowdfunding/contracts/campaigns/test_snapshots/test/: test_close_campaign_transfers_funds.1.json  test_create_and_get_campaign.1.json  test_donate_updates_campaign_and_leaderboard.1.json  test_donate_zero_amount_panics.1.json  test_multiple_campaigns_independent.1.json
contracts/crowdfunding/contracts/crowdfunding/src/: lib.rs  test.rs
contracts/crowdfunding/contracts/leaderboard/: Cargo.toml
contracts/crowdfunding/contracts/leaderboard/src/: lib.rs  test.rs
contracts/crowdfunding/contracts/leaderboard/test_snapshots/test/: test_cumulative_donations.1.json  test_donor_list_unique.1.json  test_initialize_and_record.1.json  test_multiple_donors.1.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/__tests__/: CampaignCard.test.tsx  WalletModal.test.tsx  setup.ts  utils.test.ts
src/components/: CampaignCard.tsx  CreateCampaignModal.tsx  DonatePanel.tsx  Hero.tsx  Leaderboard.tsx  OrbitalScene.tsx  TransactionResult.tsx  WalletModal.tsx  WalletPanel.tsx
src/hooks/: useCampaigns.ts  useContract.ts  useTransaction.ts  useWallet.ts  useWalletKit.ts
